force-app/main/default/objects/ContactPointTypeConsent/ContactPointTypeConsent.object-meta.xml
<CustomObject>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>