force-app/main/default/objects/ContactPointTypeConsent/fields/Consent_Capture_Source__c.field-meta.xml
<CustomField>
    <fullName>Consent_Capture_Source__c</fullName>
    <label>Consent Capture Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
                <label>Direct Email</label>
            </value>
            <value>
                <fullName>Phone</fullName>
                <label>Direct Phone</label>
            </value>
            <value>
                <fullName>Donations on website</fullName>
            </value>
            <value>
                <fullName>POD portal</fullName>
            </value>
            <value>
                <fullName>Event ticket sales</fullName>
            </value>
            <value>
                <fullName>Referral Sign Ups</fullName>
            </value>
            <value>
                <fullName>Campaign actions</fullName>
            </value>
            <value>
                <fullName>Global Opt Out</fullName>
            </value>
            <value>
                <fullName>CAF GAYE</fullName>
            </value>
            <value>
                <fullName>CAF Online/Direct</fullName>
            </value>
            <value>
                <fullName>Charitable Giving</fullName>
            </value>
            <value>
                <fullName>Work for Good</fullName>
            </value>
            <value>
                <fullName>Benevity</fullName>
            </value>
            <value>
                <fullName>Just Giving</fullName>
                <label>JustGiving</label>
            </value>
            <value>
                <fullName>Charities Trust (Payroll)</fullName>
            </value>
            <value>
                <fullName>Enthuse</fullName>
            </value>
            <value>
                <fullName>Donr</fullName>
            </value>
            <value>
                <fullName>Hands on Payroll Giving</fullName>
            </value>
            <value>
                <fullName>Marketing Cloud</fullName>
            </value>
            <value>
                <fullName>Mailing Preference Service</fullName>
            </value>
            <value>
                <fullName>FinDock Giving Page</fullName>
            </value>
            <value>
                <fullName>Fundraising Preference Service</fullName>
            </value>
            <value>
                <fullName>Give as you Live</fullName>
            </value>
            <value>
                <fullName>Give Star</fullName>
            </value>
            <value>
                <fullName>Mailing House Suppression</fullName>
            </value>
            <value>
                <fullName>Meta</fullName>
            </value>
            <value>
                <fullName>Return Fundraising</fullName>
            </value>
            <value>
                <fullName>The Big Give</fullName>
            </value>
            <value>
                <fullName>Upward Comms</fullName>
            </value>
            <value>
                <fullName>Virgin Money</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>