force-app/main/default/objects/ContactPointTypeConsent/fields/Legal_Basis__c.field-meta.xml
<CustomField>
    <fullName>Legal_Basis__c</fullName>
    <description>Consent: The individual has given their permission, for a specific purpose to contact them via a particular channel.

Legitimate Interests: Because of interest shown in the past we believe the supporter will be happy to hear from us (Note: only applies to Post and Phone).

Contract: Because supporter has directly signed up for information.</description>
    <inlineHelpText>Consent: The individual has given their permission, for a specific purpose to contact them via a particular channel.

Legitimate Interests: Because of interest shown in the past we believe the supporter will be happy to hear from us (Note: only applies to Post and Phone).

Contract: Because supporter has directly signed up for information.</inlineHelpText>
    <label>Legal Basis</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consent</fullName>
                <default>true</default>
                <label>Consent</label>
            </value>
            <value>
                <fullName>Contract</fullName>
                <isActive>false</isActive>
                <label>Contract</label>
            </value>
            <value>
                <fullName>Legitimate Interest</fullName>
                <isActive>false</isActive>
                <label>Legitimate Interest</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>