force-app/main/default/objects/ContactPointTypeConsent/fields/Name_for_FD_creation__c.field-meta.xml
<CustomField>
    <fullName>Name_for_FD_creation__c</fullName>
    <formula>Party.LastName &amp; &quot; - &quot; &amp;   TEXT(Channel__c) &amp; &quot; - &quot; &amp; &quot;Findock Giving Page&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name for FD creation</label>
    <type>Text</type>
</CustomField>