force-app/main/default/objects/ContactPointTypeConsent/fields/sj_UI_ContactPointTypeConsent__c.field-meta.xml
<CustomField>
    <fullName>sj_UI_ContactPointTypeConsent__c</fullName>
    <description>Data Migration</description>
    <externalId>true</externalId>
    <label>sj_UI_ContactPointTypeConsent__c</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>